<?xml version="1.0"?>
<package format="3">
  <name>armando_controller</name>
  <version>0.0.0</version>
  <description>Armando controller package</description>
  <maintainer email="antonio.liccardo97@hotmail.com">antonioliccardo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
