<?xml version="1.0"?>
<package format="3">
  <name>armando_description</name>
  <version>0.0.0</version>
  <description>Armando description package</description>
  <maintainer email="antonio.liccardo97@hotmail.com">antonioliccardo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>urdf_launch</depend>

  <export>
   <build_type>ament_cmake</build_type>
   <gazebo_ros gazebo_model_path="${prefix}/../"/>
  </export>
</package>
